src/objects/ShukaMikomiData__c.object
<CustomObject>
    <fields>
        <fullName>Hizuke__c</fullName>
        <description>元日付　≧　本日　＝　元日付	
元日付　＜　本日　＝　元日付　＋　実績反映年数　×　３５６
元日付　＜　本日　＝　元日付　＋　実績反映月数　×　３０
元日付　＜　本日　＝　元日付　＋　実績反映日数</description>
        <formula>IF (  MotoHizuke__c  &lt;  TODAY() ,
 MotoHizuke__c  + 
 ShohinShizaiM__r.JissekiHaneiNissu__c +
 ShohinShizaiM__r.JissekiHaneiTsukisu__c * 30 +
 ShohinShizaiM__r.JissekiHaneiNensu__c * 365
 ,
 MotoHizuke__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>元日付が到来前
　→　元日付（出荷予定日など）として、仮出荷引当参考値などとする。

元日付の到来後
　→　商品資材マスタの実績反映日数/月数/年数を加算し消費予測値とする。</inlineHelpText>
        <label>消費予測日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JuchuMeisaiData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>出荷明細データ</label>
        <referenceTo>JuchuMeisaiData__c</referenceTo>
        <relationshipLabel>消費見込データ</relationshipLabel>
        <relationshipName>ShukaMikomiData_JuchuMeisaiData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeisuKasan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>予測係数を個別に微調整する数値（少数）。</inlineHelpText>
        <label>係数加算</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KijunShohisu__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>初期値
　→　受注数量をWFRで反映。</inlineHelpText>
        <label>基準消費数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MotoHizuke__c</fullName>
        <inlineHelpText>出荷データの納品予定日をWFRをで反映。</inlineHelpText>
        <label>元日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiM__c</fullName>
        <label>商品資材マスタ</label>
        <referenceTo>ShohinShizaiM__c</referenceTo>
        <relationshipName>ShukaMikomiData_ShohinShizaiM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiMmei__c</fullName>
        <formula>ShohinShizaiM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品資材マスタ名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohisuKasan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>消費数量を個別に微調整する数量。</inlineHelpText>
        <label>消費数加算</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShohisuNamachi__c</fullName>
        <defaultValue>0</defaultValue>
        <label>￥￥_消費数生値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shohisu__c</fullName>
        <formula>IF ( JuchuMeisaiData__r.JuchuData__r.JidoHikiateFlg__c ,
  KijunShohisu__c ,
 ( KijunShohisu__c  +  ShohisuKasan__c )  *  (  ShohinShizaiM__r.YosokuKeisu__c  +  KeisuKasan__c  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>受注データの引当スタンバイがONの場合。
消費数＝基準消費数

受注データの引当スタンバイがOFFの場合。
消費数＝（基準消費数＋消費数加算）×（予測係数＋係数加算　）</inlineHelpText>
        <label>消費数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YosokuKeisu__c</fullName>
        <formula>ShohinShizaiM__r.YosokuKeisu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>商品資材マスタの予測係数。</inlineHelpText>
        <label>予測係数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YosokuTaishoFlgNamachi__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予測対象判定のフラグをWFRにより転記。</inlineHelpText>
        <label>￥￥_予測対象フラグ生値</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YosokuTaishoHantei__c</fullName>
        <formula>AND( 
 Hizuke__c &lt;= ShohinShizaiM__r.YosokuTaishoMade__c , 
 Hizuke__c &gt;= ShohinShizaiM__r.YosokuTaishoKara__c ,
OR(
 ISBLANK(  JuchuMeisaiData__c  ),
 JuchuMeisaiData__r.JuchuData__r.HikiateKanryoFlg__c,
 JuchuMeisaiData__r.JuchuData__r.JidoHikiateFlg__c 
))</formula>
        <inlineHelpText>消費予測日付が　商品資材マスタの予測対象期間内
　かつ

受注明細データが空白
　あるいは
受注データ　の　引当成功完了ON
　あるいは
受注データ　の　引当スタンバイON</inlineHelpText>
        <label>予測対象判定</label>
        <type>Checkbox</type>
    </fields>
    <label>消費見込データ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ShohinShizaiMmei__c</columns>
        <columns>Hizuke__c</columns>
        <columns>YosokuTaishoHantei__c</columns>
        <columns>KijunShohisu__c</columns>
        <columns>Shohisu__c</columns>
        <columns>JuchuMeisaiData__c</columns>
        <columns>ShohinShizaiM__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>View20170424a</fullName>
        <columns>NAME</columns>
        <columns>YosokuTaishoHantei__c</columns>
        <columns>Hizuke__c</columns>
        <columns>ShohinShizaiMmei__c</columns>
        <columns>Shohisu__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>YosokuTaishoHantei__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>消費見込対象</label>
    </listViews>
    <nameField>
        <displayFormat>消費見込-{000000000}</displayFormat>
        <label>消費見込番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>